# Rchat

./: Cargo.toml  README.md
src/: connections.rs  encryption.rs  file_management.rs  main.rs  tui.rs
